# VisualDescriptorAnalyzer

./: CMakeLists.txt  README.md  compile.sh
Debug/: config.txt  jobs_lbp_non_uniform.txt  jobs_lbp_uniform.txt  jobs_lbpa.txt  results.sh  run.sh  server_config.txt  shapes.txt
jobs/probe_a/: jobs_lbp_uniform.txt  jobs_lbpa.txt
jobs/probe_b/: jobs_lbp_uniform.txt  jobs_lbpa.txt
jobs/probe_c/: non_uniform.txt
jobs/probe_d/: all_jobs.txt
jobs/probe_e/: only_gabor_border_uniform_jobs3.txt  only_gabor_uniform_jobs.txt  only_gabor_uniform_jobs2.txt
results/FERET_max/: server_config.txt  top_10.results
results/Gabor/results_non_uniform/: non_uniform_e2.results  non_uniform_e2_top_10.results
results/Gabor/results_uniform/: uniform_e1.results  uniform_e1_top_10.results  uniform_e2.results  uniform_e2_top_10.results
results/Gabor/sources/: server_config_e1.txt  server_config_e2.txt
results/LBP/results_probe_a/: lbp_non_uniform.results  lbp_non_uniform_top_10.results  lbp_uniform.results  lbp_uniform_top_10.results
results/LBP/results_probe_b/: lbp_uniform_results  lbp_uniform_top_5.results
src/: Configuration.cpp  GUI.cpp  LBP.cpp  LBPa.cpp  Logger.cpp  Method.cpp  classification.cpp  extraction.cpp  gabor.cpp  loader.cpp  main.cpp  preprocessing.cpp  tools.cpp
src/include/: Configuration.h  GUI.h  LBP.h  LBPa.h  Logger.h  Method.h  classification.h  extraction.h  gabor.h  loader.h  preprocessing.h  stdim.h  tools.h
tex/: A14B0385P.tex  literatura.bib  makefile  slovnik.tex
tex/img/: LBP_basic.kra  poem.kra  uniform_non_uniform.kra
(+17 files in other folders)
